--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.11 M
 
+2019-6-26 Will
+* Added in missing new files :(
+
 2019-6-25 Will
 * Moved data->text conversions to new file 'Data2Text'.
 
