--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ yoshimi 1.5.11 M
 
 2019-6-26 Will
 * Added in missing new files :(
+* Refinements to data->text conversions.
+  Specifically so that MIDI-learn text doesn't include
+  the current value or such as 'on/off' responses.
 
 2019-6-25 Will
 * Moved data->text conversions to new file 'Data2Text'.
