Implemented non-destructive system effect on/off Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.11 M
 
+2019-7-1 Will
+* Implemented non-destructive system effect on/off.
+* Updated docs.
+
 2019-6-27 Will
 * BugFix: GUI not exporting banks.
   CLI was working fine.
