--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.5.11 M
 
 2019-7-9 Will
 * NRPN for load from history now includes MIDI learn.
+* Found more magic numbers to convert in Resonance.
+* Improved Resonance CLI responses.
 
 2019-7-8 Will
 * Resolved potential ambiguity in GUI switch switch exit.
