--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,11 @@
 yoshimi 1.5.11 M
 
-2019-7-9 Will
+2019-7-10 Will
 * Implimented formal calls to read current root and bank.
 * All instrument name bank calls now require root and bank.
   current values no longer assumed.
+* Applied minor buffer size optimisation.
+  Size could have been needlessly greater than incoming.
 
 2019-7-9 Will
 * NRPN for load from history now includes MIDI learn.
