--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.11 M
 2019-7-14 Will
  * Revised LV2 code Re. buffer sizes.
  * Included corrected full explanation in code.
+ * Made more bank calls require root and bank.
 
 2019-7-10 Will
 * Implimented formal calls to read current root and bank.
