--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -3,6 +3,9 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
+Copy/paste doesn't maintain effects changed status on pasted location.
+Remember to nothe tha this work cross instance!!!
+
 Master UI windows makes direct calls to FileMgr :(
 
 Revise GUI voice list related to voice editor.
