--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.11 M
 2019-7-21 Will
 * Failed to actually add manual to commit :(
 * Preliminary ideas for preset roots.
+* Converted envelope type numbers to labels.
 
 2019-7-19 Will
 * Temporary install of provisional 1.6.0 manual
