--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.11 M
 
+2019-7-27 Will
+* Moved (now common) preset lists to base parameters.
+* Considerably re-factored copy-paste.
+
 2019-7-26 Will
 * Managing preset roots now use standard Yoshimi calls.
   Not yet accessible to CLI.
