--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.11 M
 2019-7-27 Will
 * Moved (now common) preset lists to base parameters.
 * Considerably re-factored copy-paste.
+* Added preset error reports to GUI.
 
 2019-7-26 Will
 * Managing preset roots now use standard Yoshimi calls.
