--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.11 M
 
+2019-7-28 Will
+* Copy-paste cleanups.
+
 2019-7-27 Will
 * Moved (now common) preset lists to base parameters.
 * Considerably re-factored copy-paste.
