--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.11 M
 * Started separating miscmsg from other controls.
 * Renamed all GUI par2 labels as miscmsg.
 * Fixed regression CLI off by 1 history list loading.
+* All CLI changes complete.
 
 2019-7-27 Will
 * Moved (now common) preset lists to base parameters.
