BugFix: Part not setting instrument labels Updated Miscellany/Images

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.11 M
 2019-7-31 Will
 * Small bank refinements.
 * Bank search window first starts with Piano.
+* BugFix: Part not setting instrument labels.
+* Updated Miscellany/Images
 
 2019-7-30 Will
 * Applied work-round so paste updates GUI effects.
