--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,9 @@ yoshimi 1.5.11 M
 * Bank search window first starts with Piano.
 * BugFix: Part not setting instrument labels.
 * Updated Miscellany/Images
+* Added protection against overlength lines in CLI.
+  Max size is set to 252 chars but longest Yoshim1 command
+  is less than 180.
 
 2019-7-30 Will
 * Applied work-round so paste updates GUI effects.
