Moved static lists from CmdInterface.h to TextLists.h

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.11 M
 2019-8-1 Will
 * Adjusted new instrument group controls to Yoshi standard.
 * Implemented CLI access to group controls.
+* Moved static lists from CmdInterface.h to TextLists.h
 
 2019-7-31 Will
 * Small bank refinements.
