Further refinements to ring buffer code

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.11 M
 
+2019-8-6 Will
+* Further refinements to ring buffer code.
+
 2019-8-4 Will
 * Reinstated Cormi_Sound bank.
   This seems to have been lost at some point.
