Corrected wrong CLI reporting of voice oscillator Updated docs

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.11 M
 2019-8-12
 * Updated Miscellany/Images/PartEdit.png
 * Removed incorrect attribution in Effects/Reverb.cpp
+* Corrected wrong CLI reporting of voice oscillator.
+* Updated docs.
 
 2019-8-9 Will
 * Added Rainer to people list in GUI.
