Doc updates (no code changes)

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.11 M
 
+2019-8-15
+* Doc updates
+
 2019-8-12
 * Updated Miscellany/Images/PartEdit.png
 * Removed incorrect attribution in Effects/Reverb.cpp
