--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,13 @@
 yoshimi 1.5.11 M
 
-2019-8-15
+2019-8-17 Will
+* CLI osc and mod types show names not internal values.
+
+2019-8-15 Will
 * Doc updates
 * Updated Miscellany/Images
 
-2019-8-12
+2019-8-12 Will
 * Updated Miscellany/Images/PartEdit.png
 * Removed incorrect attribution in Effects/Reverb.cpp
 * Corrected wrong CLI reporting of voice oscillator.
