Fixed effects regression (not midi-learning)

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.6.0 rc1
 
+2019-8-22 Will
+* Fixed effects regression (not midi-learning)
+  Found by Jesper, and caused by the change from numeric a
+  value for the learn fag being changed to an enum with a
+  different value.
+
 2019-8-19 Will
 * Added shortcut and ellipsis to GUI Instruments/Search entry.
 * Improved CLI instrument group comments.
