--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.6.0 M
 
+2019-9-8 Will
+* BugFix: Loading files failed with mxml V 3.1 :(
+
 2019-9-7 Will
 * CLI can now set instrument type.
 * Removed outdated 'Yoshimi Control Numbers.txt'
