--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,10 @@
 yoshimi 1.6.0 M
 
 2019-9-17 Will
-* CLI conversion done for select bank & root
+* CLI conversion done for select bank & root.
   Listing not done.
+* Activated CLI bank lisiting for defined entries.
+* Converted GUI entries for bank & root selection.
 
 2019-9-16 Will
 * Started revision of bank controls.
