All CLI effects correctly reporting

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.6.0 M
 
+2019-9-24 Will
+* All CLI effects correctly reporting.
+
 2019-9-22 Will
 * Most CLI effects switches reported as text.
 * Updated docs.
