--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.6.0 M
 
+2019-9-25 Will
+* Reverted cmake change from Iain
+  With GCC it breaks on readline :(
+
 2019-9-24 Will
 * All CLI effects correctly reporting.
 * Corrected anomaly CLI with sys/ins send.
