--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ yoshimi 1.6.0 M
 2019-9-25 Will
 * Reverted cmake change from Iain
   With GCC it breaks on readline :(
+* Reverted change to 'data2Textfrom Iain
+  In the CLI kit items > 1 don't report the
+  waveform as text.
 
 2019-9-24 Will
 * All CLI effects correctly reporting.
