--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 yoshimi 1.6.0 M
 
 2019-10-15 Will
+* Missing include in main.cpp when compiling headless.
+* FLTK ref. in Misc/config.cpp when compiling headless.
+* Changed CliFuncs readPartPeak to allow left/right.
+  Not currently in use.
+
+2019-10-15 Will
 * Revised SubSynth and Oscillator Harmonics GUI.
   Central numbering and wider subsynth spacing.
 
