--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.6.0 M
 
+2019-10-22 Will
+* Instant (forced) exit also available from GUI.
+  Hit ctrl with menu exit, just before with WM exit.
+  This will not save any pending changes.
+
+2019-10-21 Will
 * Revised CLI lists for consistency.
 * Added 'CMakeListsOLD.txt'
   Done in case of unexpected issues with merge
