Added more labels for new bank commands

--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ yoshimi 1.6.0 M
 * Reverted 'A' note limits and corrected terminology.
   Note range is now 24 to 84.
   Frequency range 30Hz to 1.1 kHz.
+* Added more labels for new bank commands.
 
 2019-11-1 Will
 * NRPN can shutdown with exit value 16.
