GUI suppress change warning on force exit

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.6.0 M
 2019-11-8 Will
 * Mixer Panel format can be changed from config.
   This alows control form typical 7in displays.
+* GUI suppress change warning on force exit.
 
 2019-11-7 Will
 * Proposed fix for mxml 3.1 failure with LV2.
