--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.6.0 M
 
+2019-11-18 Will
+* Corrected some minor errors in CLI lists.
+* Updated local copy of user guide.
+
 2019-11-15 Will
 * Applied experimental optinisations to OscilGenUI.
 * Minor correction to CLI info lists.
