Implemented search feature for ALSA MIDI input

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.6.0 M
 
+2019-11-23 Will
+* Implemented search feature for ALSA MIDI input.
+
 2019-11-21 Will
 * Removed redundant code.
 * Improved CLI bank info.
