Updated docs Updated local copy of User Guide

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.6.0 M
 
 2019-11-23 Will
 * Implemented search feature for ALSA MIDI input.
+* Updated docs.
+* Updated local copy of User Guide.
 
 2019-11-21 Will
 * Removed redundant code.
