--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,8 @@ yoshimi 1.6.0 M
   no instance files include base parameters
   no state files include base paramters
 * Removed extra redundant config code.
+* Further refinements to startup config.
+* Fixed potential memory leak.
 
 2019-11-23 Will
 * ALSA search connects to all ports, not just 0.
